# api/docs/swagger.yaml
@@ -52,7 +52,6 @@ definitions:
   models.CompressJob:
     properties:
       compression:
-        description: '"low", "medium", "high"'
         type: string
       created_at:
         type: string
@@ -63,7 +62,6 @@ definitions:
       output_file_id:
         type: string
       status:
-        description: '"pending", "done", "failed"'
         type: string
       user_id:
         type: string
@@ -106,19 +104,6 @@ definitions:
         type: string
     type: object
   models.CreateOrganizeJobRequest:
-    properties:
-      input_file_id:
-        example: abc-123
-        type: string
-      new_order:
-        description: JSON orqali keladi, keyin []int ga aylantiriladi
-        example:
-        - 3
-        - 1
-        - 2
-        items:
-          type: integer
-        type: array
     type: object
   models.CreateRole:
     properties:
@@ -230,16 +215,11 @@ definitions:
         type: string
       input_file_id:
         type: string
-      output_file_ids:
-        description: Ajratilgan fayllarning ID’lari
-        items:
-          type: string
-        type: array
-      page_ranges:
-        description: 'Masalan: "1-2,5,7"'
+      output_file_id:
+        type: string
+      pages_to_extract:
         type: string
       status:
-        description: pending, done, failed
         type: string
       user_id:
         type: string
@@ -290,6 +270,21 @@ definitions:
       user_id:
         type: string
     type: object
+  models.Log:
+    properties:
+      created_at:
+        type: string
+      id:
+        type: string
+      job_id:
+        type: string
+      job_type:
+        type: string
+      level:
+        type: string
+      message:
+        type: string
+    type: object
   models.LoginRequest:
     properties:
       email:
@@ -331,19 +326,22 @@ definitions:
   models.OrganizeJob:
     properties:
       created_at:
+        description: Yaratilgan vaqt
         type: string
       id:
         type: string
       input_file_id:
         type: string
       new_order:
-        description: 'sahifa tartibi masalan: [3,1,2]'
+        description: 'Sahifalarning yangi tartibi, masalan: [3,1,2]'
         items:
           type: integer
         type: array
       output_file_id:
+        description: Natija fayl ID
         type: string
       status:
+        description: pending, processing, done, failed
         type: string
       user_id:
         type: string
@@ -484,6 +482,7 @@ definitions:
   models.RotateJob:
     properties:
       angle:
+        description: "\U0001F527"
         type: integer
       created_at:
         type: string
@@ -494,10 +493,9 @@ definitions:
       output_file_id:
         type: string
       output_path:
-        description: ✅ YANGI QO‘SHILGAN FIELD
         type: string
       pages:
-        description: Aylantiriladigan sahifalar
+        description: agar mavjud bo‘lsa
         type: string
       status:
         type: string
@@ -585,12 +583,137 @@ definitions:
       name:
         type: string
     type: object
+  models.User:
+    properties:
+      created_at:
+        type: string
+      created_by:
+        type: string
+      email:
+        type: string
+      id:
+        type: string
+      name:
+        type: string
+      status:
+        type: string
+    type: object
+  models.UserStats:
+    properties:
+      added_page_numbers:
+        description: Sahifalarga raqam qo‘shish
+        type: integer
+      compressed:
+        description: Siqilgan fayllar soni
+        type: integer
+      cropped:
+        description: PDFni kesish ishlari
+        type: integer
+      extracted:
+        description: Sahifalar ajratilgan ishlar
+        type: integer
+      jpg_to_pdf:
+        description: JPG → PDF aylantirishlar
+        type: integer
+      merged:
+        description: Birlashtirish ishlar soni
+        type: integer
+      organized:
+        description: Sahifa tartibi o‘zgartirilgan
+        type: integer
+      pdf_to_jpg:
+        description: PDF → JPG aylantirishlar
+        type: integer
+      pdf_to_word:
+        description: PDF → Word aylantirishlar
+        type: integer
+      protected:
+        description: Parol bilan himoyalanganlar
+        type: integer
+      removed_pages:
+        description: Sahifa o‘chirish ishlar soni
+        type: integer
+      rotated:
+        description: Sahifa aylantirishlar
+        type: integer
+      splitted:
+        description: Bo‘lib olish ishlar soni
+        type: integer
+      total_files:
+        description: Umumiy yuklangan fayllar
+        type: integer
+      unlocked:
+        description: PDF qulflar yechilgan soni
+        type: integer
+      used_storage_mb:
+        description: MB’da ishlatilgan xotira (hisoblash kerak)
+        type: integer
+      watermarked:
+        description: Suv belgisi qo‘shilganlar
+        type: integer
+    type: object
 info:
   contact: {}
   description: Authentication and Authorization API
   title: Auth API
   version: "1.0"
 paths:
+  /api/files/cleanup:
+    get:
+      description: Admin-only endpoint to delete files older than N days
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/models.Response'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/models.Response'
+      security:
+      - ApiKeyAuth: []
+      summary: Cleanup old files
+      tags:
+      - file
+  /api/logs/{id}:
+    get:
+      consumes:
+      - application/json
+      description: Get logs by job ID (for debugging or audit)
+      parameters:
+      - description: Job ID
+        in: path
+        name: id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/models.Log'
+            type: array
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/models.Response'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/models.Response'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/models.Response'
+      security:
+      - ApiKeyAuth: []
+      summary: Get logs for a specific job
+      tags:
+      - logs
   /api/pdf/add-page-numbers:
     post:
       consumes:
@@ -771,6 +894,69 @@ paths:
       summary: Get Crop Job info
       tags:
       - PDF Edit
+  /api/pdf/extract:
+    post:
+      consumes:
+      - application/json
+      parameters:
+      - description: extract request body
+        in: body
+        name: request
+        required: true
+        schema:
+          $ref: '#/definitions/models.ExtractPagesRequest'
+      produces:
+      - application/json
+      responses:
+        "201":
+          description: Created
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/models.Response'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/models.Response'
+      security:
+      - ApiKeyAuth: []
+      summary: Create extract job
+      tags:
+      - pdf-extract
+  /api/pdf/extract/{id}:
+    get:
+      consumes:
+      - application/json
+      parameters:
+      - description: extract job ID
+        in: path
+        name: id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/models.ExtractJob'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/models.Response'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/models.Response'
+      security:
+      - ApiKeyAuth: []
+      summary: Get extract job by ID
+      tags:
+      - pdf-extract
   /api/pdf/jpg-to-pdf:
     post:
       consumes:
@@ -1172,6 +1358,73 @@ paths:
       summary: Get protected PDF job by ID
       tags:
       - PDF Security
+  /api/pdf/removepage:
+    post:
+      consumes:
+      - application/json
+      parameters:
+      - description: remove pages job
+        in: body
+        name: request
+        required: true
+        schema:
+          $ref: '#/definitions/models.RemovePagesRequest'
+      produces:
+      - application/json
+      responses:
+        "201":
+          description: Created
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/models.Response'
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/models.Response'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/models.Response'
+      security:
+      - ApiKeyAuth: []
+      summary: Create remove pages job
+      tags:
+      - pdf-remove
+  /api/pdf/removepage/{id}:
+    get:
+      consumes:
+      - application/json
+      parameters:
+      - description: remove job ID
+        in: path
+        name: id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/models.RemoveJob'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/models.Response'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/models.Response'
+      security:
+      - ApiKeyAuth: []
+      summary: Get remove pages job by ID
+      tags:
+      - pdf-remove
   /api/pdf/rotate:
     post:
       consumes:
@@ -1264,6 +1517,36 @@ paths:
       summary: Create split job
       tags:
       - pdf-split
+  /api/pdf/split/{id}:
+    get:
+      consumes:
+      - application/json
+      parameters:
+      - description: split job ID
+        in: path
+        name: id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/models.SplitJob'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/models.Response'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/models.Response'
+      security:
+      - ApiKeyAuth: []
+      summary: Get split job by ID
+      tags:
+      - pdf-split
   /api/pdf/unlock:
     post:
       consumes:
@@ -1327,6 +1610,32 @@ paths:
       summary: Get Unlock Job status
       tags:
       - PDF Unlock
+  /api/stats/user:
+    get:
+      consumes:
+      - application/json
+      description: Foydalanuvchining PDF bo‘yicha statistikasi (birlashtirish, bo‘lish
+        va h.k.)
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/models.UserStats'
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/models.Response'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/models.Response'
+      security:
+      - ApiKeyAuth: []
+      summary: Foydalanuvchi statistikasi
+      tags:
+      - stats
   /file/{id}:
     delete:
       parameters:
@@ -1462,6 +1771,31 @@ paths:
       summary: Login user
       tags:
       - auth
+  /me:
+    get:
+      consumes:
+      - application/json
+      description: Foydalanuvchining o‘z profilini olish (JWT token orqali)
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/models.User'
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/models.Response'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/models.Response'
+      security:
+      - ApiKeyAuth: []
+      summary: Get my profile
+      tags:
+      - user
   /otp/confirm:
     post:
       consumes:
@@ -1532,166 +1866,6 @@ paths:
       summary: Send OTP to email
       tags:
       - otp
-  /pdf/extract:
-    post:
-      consumes:
-      - application/json
-      parameters:
-      - description: extract request body
-        in: body
-        name: request
-        required: true
-        schema:
-          $ref: '#/definitions/models.ExtractPagesRequest'
-      produces:
-      - application/json
-      responses:
-        "201":
-          description: Created
-          schema:
-            additionalProperties:
-              type: string
-            type: object
-        "400":
-          description: Bad Request
-          schema:
-            $ref: '#/definitions/models.Response'
-        "500":
-          description: Internal Server Error
-          schema:
-            $ref: '#/definitions/models.Response'
-      security:
-      - ApiKeyAuth: []
-      summary: Create extract job
-      tags:
-      - pdf-extract
-  /pdf/extract/{id}:
-    get:
-      consumes:
-      - application/json
-      parameters:
-      - description: extract job ID
-        in: path
-        name: id
-        required: true
-        type: string
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            $ref: '#/definitions/models.ExtractJob'
-        "404":
-          description: Not Found
-          schema:
-            $ref: '#/definitions/models.Response'
-        "500":
-          description: Internal Server Error
-          schema:
-            $ref: '#/definitions/models.Response'
-      security:
-      - ApiKeyAuth: []
-      summary: Get extract job by ID
-      tags:
-      - pdf-extract
-  /pdf/remove-pages:
-    post:
-      consumes:
-      - application/json
-      parameters:
-      - description: remove pages job
-        in: body
-        name: request
-        required: true
-        schema:
-          $ref: '#/definitions/models.RemovePagesRequest'
-      produces:
-      - application/json
-      responses:
-        "201":
-          description: Created
-          schema:
-            additionalProperties:
-              type: string
-            type: object
-        "400":
-          description: Bad Request
-          schema:
-            $ref: '#/definitions/models.Response'
-        "401":
-          description: Unauthorized
-          schema:
-            $ref: '#/definitions/models.Response'
-        "500":
-          description: Internal Server Error
-          schema:
-            $ref: '#/definitions/models.Response'
-      security:
-      - ApiKeyAuth: []
-      summary: Create remove pages job
-      tags:
-      - pdf-remove
-  /pdf/remove-pages/{id}:
-    get:
-      consumes:
-      - application/json
-      parameters:
-      - description: remove job ID
-        in: path
-        name: id
-        required: true
-        type: string
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            $ref: '#/definitions/models.RemoveJob'
-        "404":
-          description: Not Found
-          schema:
-            $ref: '#/definitions/models.Response'
-        "500":
-          description: Internal Server Error
-          schema:
-            $ref: '#/definitions/models.Response'
-      security:
-      - ApiKeyAuth: []
-      summary: Get remove pages job by ID
-      tags:
-      - pdf-remove
-  /pdf/split/{id}:
-    get:
-      consumes:
-      - application/json
-      parameters:
-      - description: split job ID
-        in: path
-        name: id
-        required: true
-        type: string
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            $ref: '#/definitions/models.SplitJob'
-        "404":
-          description: Not Found
-          schema:
-            $ref: '#/definitions/models.Response'
-        "500":
-          description: Internal Server Error
-          schema:
-            $ref: '#/definitions/models.Response'
-      security:
-      - ApiKeyAuth: []
-      summary: Get split job by ID
-      tags:
-      - pdf-split
   /role:
     post:
       consumes:
